--- a/.github/workflows/cicd_script.yml
+++ b/.github/workflows/cicd_script.yml
@@ -62,8 +62,5 @@ jobs:
           password: ${{ secrets.REMOTE_PASSWORD }}
           port: 22
           script: |
-            echo "Deploying to server..."
             mkdir -p ${{ secrets.REMOTE_TARGET_PATH }}
-            rsync -avzr --delete -e "ssh -o StrictHostKeyChecking=no" ./dist/ ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:${{ secrets.REMOTE_TARGET_PATH }}
-
-          
+            rsync -avzr --delete ./dist/ ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:${{ secrets.REMOTE_TARGET_PATH }}
