--- a/.github/workflows/cicd_script.yml
+++ b/.github/workflows/cicd_script.yml
@@ -63,4 +63,4 @@ jobs:
           port: 22
           script: |
             mkdir -p ${{ secrets.REMOTE_TARGET_PATH }}
-            rsync -avzr --delete ./dist/ ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:${{ secrets.REMOTE_TARGET_PATH }}
+            rsync -avzr --delete -vvv ./dist/ ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:${{ secrets.REMOTE_TARGET_PATH }}
