--- a/.github/workflows/cicd_script.yml
+++ b/.github/workflows/cicd_script.yml
@@ -62,6 +62,6 @@ jobs:
           password: ${{ secrets.REMOTE_PASSWORD }}
           port: 22
           script: |
-            ls
             mkdir -p ${{ secrets.REMOTE_TARGET_PATH }}
-            rsync -avzr --delete -vvv ./dist/ ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:${{ secrets.REMOTE_TARGET_PATH }}
+            ls ${{ secrets.REMOTE_TARGET_PATH }}
+            rsync -avzr --delete ./dist/ ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:${{ secrets.REMOTE_TARGET_PATH }}
